# redstone-compiler

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  schem2nbt.py
.github/workflows/: deploy-nbt-viewer.yml
crates/nbt-sim-wasm/: Cargo.toml
crates/nbt-sim-wasm/src/: lib.rs
docs/: global_routing_visualization.html  hierarchical_placer_design.md  local_placer_improvement.md  place_and_route.md  sequential_primitives.md  verilog_rtl_interface_design.md
src/: block.rs  circuit.rs  common.rs  gate.rs  lib.rs  main.rs  output.rs  pe.rs  simulator.rs  world.rs
src/cluster/: mod.rs
src/common/: block.rs  gate.rs  mod.rs  world.rs
src/graph/: analysis.rs  cluster.rs  graph_sim.rs  graphviz.rs  logic.rs  mod.rs  module.rs  world.rs
src/logic/: mod.rs
src/nbt/: mod.rs
src/sequential/: core.rs  layout.rs  mod.rs  synthesis.rs
src/solver/: and_macro.rs  constraints.rs  lp.rs  mod.rs  new.rs  new2.rs  path.rs  placement.rs  scip.rs  types.rs
src/transform/: logic.rs  mod.rs  world.rs  world_to_logic.rs
src/utils/: mod.rs
src/verilog/: ast.rs  design.rs  lexer.rs  lower.rs  mod.rs  parser.rs  rtl.rs  synth.rs
src/world/: block.rs  gate.rs  mod.rs  position.rs  simulator.rs  world.rs
test/: alu-export.nbt  alu.v  and-gate.nbt  counter-global-smoke.nbt  counter-global-smoke.outputs.json  d-flip-flop-global-smoke.nbt  d-flip-flop-global-smoke.outputs.json  d-latch.nbt  full-adder.nbt  half-adder-generated-from-verilog.nbt  half-adder-generated.nbt  half-adder.v  rs-latch.nbt  test-repeater.nbt  xor-gate-complex.nbt  xor-gate-shortest.nbt  xor-gate-simple.nbt
tools/nbt-viewer/: README.md  index.html  (+4 more)
(+85 files in other folders)
