[package]
name = "redstone-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "1.0.0"
disjoint-set = "0.0.2"
eyre = "0.6.8"
fastnbt = "2"
fastanvil = "0.26"
itertools = "0.11.0"
petgraph = "0.6.3"
quine-mc_cluskey = "0.2.4"
serde_json = "1.0.96"
structopt = "0.3.26"
sv-parser = "0.13.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
flate2 = "1.0.26"
serde = "1.0.183"
