[package]
name = "redstone-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0", features = ["deref"] }
disjoint-set = "0.0.2"
eyre = "0.6.8"
fastnbt = "2"
fastanvil = "0.26"
indicatif = { version = "0.17.9", features = ["rayon"] }
itertools = "0.11.0"
petgraph = "0.6.3"
quine-mc_cluskey = "0.2.4"
rand = "0.8.5"
rayon = "1.10.0"
serde_json = "1.0.96"
structopt = "0.3.26"
strum = "0.26"
strum_macros = "0.26"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
flate2 = "1.0.26"
serde = "1.0.183"
