[package]
name = "nbt-sim-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eyre = "0.6.8"
getrandom = { version = "0.2", features = ["js"] }
redstone-compiler = { path = "../.." }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
